--- a/src/pages/dashboard/styles.module.css
+++ b/src/pages/dashboard/styles.module.css
@@ -57,6 +57,7 @@
   max-width: 1024px;
   display: flex;
   flex-direction: column;
+  margin-bottom: 20px;
 }
 
 .taskContainer a {
@@ -84,6 +85,7 @@
   align-items: center;
   justify-content: flex-start;
   margin-bottom: 8px;
+  margin-bottom: px;
 }
 
 .tag {
